--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "mm.h": "c"
+        "string.h": "c",
+        "common.h": "c",
+        "libmem.h": "c",
+        "cpu.h": "c",
+        "timer.h": "c"
     }
 }
