--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,13 @@
 {
     "files.associations": {
-        "string.h": "c",
-        "common.h": "c",
-        "libmem.h": "c",
-        "cpu.h": "c",
-        "timer.h": "c",
-        "red_black_tree.h": "c"
-    }
+        "*.rmd": "markdown",
+        "mm.h": "c",
+        "syscall.h": "c",
+        "pthread.h": "c",
+        "stdlib.h": "c",
+        "rbtree.h": "c",
+        "compare": "c",
+        "common.h": "c"
+    },
+    "C_Cpp.dimInactiveRegions": false
 }
