final of finalll

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,9 +6,9 @@
       "type": "cppdbg",
       "request": "launch",
       "program": "${workspaceFolder}/os",
-      "args": ["mem1"],
+      "args": ["sched"],
       "stopAtEntry": false,
-      "cwd": "${workspaceFolder}",
+      "cwd": "${workspaceFolder}/..",
       "environment": [],
       "externalConsole": false,
       "MIMode": "gdb",
