--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,12 @@
         "stdlib.h": "c",
         "rbtree.h": "c",
         "compare": "c",
-        "common.h": "c"
+        "common.h": "c",
+        "cfs.h": "c",
+        "libmem.h": "c",
+        "stdint.h": "c",
+        "cpu.h": "c",
+        "loader.h": "c"
     },
     "C_Cpp.dimInactiveRegions": false
 }
